k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dinenit-ui-app
  labels:
    app: dinenit-ui-app
spec:
  replicas: 1  # Adjust as needed
  selector:
    matchLabels:
      app: dinenit-ui-app
  template:
    metadata:
      labels:
        app: dinenit-ui-app
    spec:
      containers:
        - name: dinenit-ui-container
          image: dinenitacrprod.azurecr.io/dinenit-ui-app:latest  # Change to your ACR image
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
